--- a/Medicine-Web/Project231/appsettings.json
+++ b/Medicine-Web/Project231/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDb": "Server=db,1433; Database=MedicineWeb; User Id=sa; Password=DatLaid234555@Xy;MultipleActiveResultSets=true,TrustServerCertificate=True"
+    "MyDb": "Server=sqlserver.myapp.svc.cluster.local,1433; Database=MedicineWeb; User Id=sa; Password=DatLaid234555@Xy;MultipleActiveResultSets=true,TrustServerCertificate=True"
   },
 
   "JWT": {
