--- a/Helm_Chart/values.yaml
+++ b/Helm_Chart/values.yaml
@@ -5,7 +5,7 @@ backEnd:
   name: back-end
   image:
     repository: datnd2711/pharmacy-be
-    tag: prod-0.90
+    tag: prod-0.92
     pullPolicy: IfNotPresent
   imagePullSecrets:
     name: my-dockerhub-secret
@@ -27,7 +27,7 @@ frontEnd:
   name: front-end
   image:
     repository: datnd2711/pharmacy-fe
-    tag: prod-0.110
+    tag: prod-0.112
     pullPolicy: IfNotPresent
   imagePullSecrets:
     name: my-dockerhub-secret
@@ -76,13 +76,13 @@ sqlserver:
 ingress:
   name: pharmacy-ingress
   annotations:
-     cert-manager.io/cluster-issuer: "ca-issuer"
+    # cert-manager.io/cluster-issuer: "ca-issuer"
     # kubernetes.io/ingress.class: "nginx"
   ingressClassName: nginx
-  tls:
-  - hosts:
-    - demo.datlaid.com
-    secretName: ssl-demo.datlaid.com
+    # tls:
+    # - hosts:
+    # - demo.datlaid.com
+    # secretName: ssl-demo.datlaid.com
   rules:
   - host: demo.datlaid.com
     paths:
